--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,6 +23,10 @@ body {
     color: white;
     position: relative;
     font-family: 'Cinzel', serif;
+    margin: 0px;
+    padding: 0px;
+    cursor: url('../img/cursor.png'), auto;
+    
 }
 
 body::before {
@@ -40,10 +44,6 @@ body::before {
     filter: blur(2px);
 }
 
-body {
-    margin: 0;
-}
-
 main {
     height: 100vh;
     overflow: scroll;
@@ -54,6 +54,7 @@ main {
 
 main::-webkit-scrollbar {
     width: 0px;
+    height: 0px;
 }
 
 main::-webkit-scrollbar-thumb {
@@ -64,11 +65,91 @@ main::-webkit-scrollbar-track {
     background: transparent;
 }
 
+a:hover{
+    cursor: url('../img/cursor_url.png'), auto;
+}
+
+input[type="text"]:hover {
+    cursor: url('../img/cursor_escribir.png'), auto;
+}
+
+footer{
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 2vh;
+    margin-top: 5vh;
+}
+
+/* Objetos */
+
+.letrero{
+    background-image: url(../img/barra_letrero.png);
+    height: 50px;
+    position: relative;
+    margin-bottom: 10vh;
+}
+
+.letrero img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-transform: uppercase;
+}
+
+.letrero h3{
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-transform: uppercase;
+    font-weight: bolder;
+    color: black;
+}
+
+.info_inicio{
+    width: 50%;
+}
+
+.info_inicio div{
+    height: 50px;
+    position: relative;
+}
+
+.info_inicio div img{
+    width: 100%;
+    height: 50px;
+}
+
+.info_inicio h4{
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-transform: uppercase;
+}
+
+.info_inicio article{
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: center;
+}
+
+.info_inicio img{
+    height: 30vh;
+}
+
+.info_inicio p{
+    padding: 5%;
+}
 
 /* Vista inicial */
 
-#menu_inicio {
-
+#menu_inicio{
+    padding: 0;
 }
 
 #inicio_aventura{
@@ -77,9 +158,10 @@ main::-webkit-scrollbar-track {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    margin-bottom: 5vh;
 }
 
-#inicio_aventura img{
+#inicio_aventura  article img{
     width: auto;
     max-height: 40vh;
 }
@@ -113,6 +195,12 @@ main::-webkit-scrollbar-track {
     text-transform: uppercase;
     font-weight: bolder;
     color: black;
+}
+
+#contenedor_info_inicio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #inicio_sesion{
