--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,6 +43,13 @@ nav button{
     border-radius: 10px;
     border-color: transparent;
     margin: 0px 1%;
+    background-color: red;
+    border-color: white;
+    box-shadow: 5px 5px 10px black;
+}
+
+nav button:hover{
+    background-color: rgb(174, 0, 0);
 }
 
 main {
