--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,7 +77,7 @@ a:hover{
     cursor: url('../img/cursor_url.png'), auto;
 }
 
-input[type="text"]:hover, input[type="password"]:hover {
+input[type="text"]:hover, input[type="password"]:hover, input[type="checkbox"]:hover {
     cursor: url('../img/cursor_escribir.png'), auto;
 }
 
